--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     
     <head>
-        <title>WIP</title>
+        <title>Demo</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-        <h1>Title</h1>
-        <p>This is the website (WIP) I will be submitting as my 2021 Digital Technology project.</p>
+        <h1>Demo 11TEC Website</h1>
+        <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
     </body>
     
 </html>
