Added openbtn and openbtn:hover classes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <head>
         <title>Demo</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="JAVASCRIPT.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
         <h1>Demo 11TEC Website</h1>
         <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
+        <br>
+        <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository here!</b></button>
     </body>
     
 </html>
