--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
     
     <head>
-        <title>Demo</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="JAVASCRIPT.js"></script>
+        <title>Demo 11TEC Website</title>        
+        <link rel="stylesheet" type="text/css" href="STYLE.css">
+        <script src="JavaScript.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
-        <h1>Demo 11TEC Website</h1>
-        <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
+        <h1>Hey, it's 3ryll3!</h1>
+        <img class="pfp" src="C:\Users\3ryll\OneDrive\Pictures\Saved Pictures\xq-pfp-2.jpg" alt="xq-pfp-2">
         <br>
+        <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
         <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository here!</b></button>
+        <br>
+        <br>
+        <img class="potted-plants" src="https://images.vexels.com/media/users/3/203109/isolated/preview/405404816fbaca953b18a74d45523a79-cute-plants-flat-by-vexels.png" alt="cute-plants-flat">
     </body>
     
 </html>
