re-Linked to style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <title>Demo 11TEC Website</title>        
-        <link rel="stylesheet" type="text/css" href="STYLE.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script src="JavaScript.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
