--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Hey, it's 3ryll3!</h1>
-        <img class="pfp" src="C:\Users\3ryll\OneDrive\Pictures\Saved Pictures\xq-pfp-2.jpg" alt="xq-pfp-2">
+        <img class="pfp" src="TEC2021-Demo\Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
         <br>
         <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
         <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository here!</b></button>
