Week 4 Tasks (cont.)

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <body>
         <h1>Hey, it's 3ryll3!</h1>
         <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
-        <br>
-        <p>This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
-        <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository here!</b></button>
-        <br>
+        <p class="intro">This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
+        <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository!</b></button>
         <br>
         <img class="potted-plants" src="https://images.vexels.com/media/users/3/203109/isolated/preview/405404816fbaca953b18a74d45523a79-cute-plants-flat-by-vexels.png" alt="cute-plants-flat">
     </body>
