Week 4 Tasks (fin.)

--- a/index.html
+++ b/index.html
@@ -9,12 +9,66 @@
     </head>
 
     <body>
-        <h1>Hey, it's 3ryll3!</h1>
-        <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
-        <p class="intro">This is the website (demo) I will be submitting as my Year 11 Digital Technology project.</p>
-        <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository!</b></button>
-        <br>
-        <img class="potted-plants" src="https://images.vexels.com/media/users/3/203109/isolated/preview/405404816fbaca953b18a74d45523a79-cute-plants-flat-by-vexels.png" alt="cute-plants-flat">
+        <div class="intro">
+            <h1>
+                Hey, it's 3ryll3!
+            </h1>
+            <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
+            <p class="intro">
+                This is the website (demo) I will be submitting as my Year 11 Digital Technology project.
+            </p>
+            <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository!</b></button>
+            <br>
+            <img class="potted-plants" src="https://images.vexels.com/media/users/3/203109/isolated/preview/405404816fbaca953b18a74d45523a79-cute-plants-flat-by-vexels.png" alt="cute-plants-flat">
+        </div>
+        <div class="sec2-table">
+            <table>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                    <th>Column 3</th>
+                    <th>Column 4</th>
+                </tr>
+                <tr>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                    <td>Data 3</td>
+                    <td>Data 4</td>
+                </tr>
+                <tr>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                </tr>
+                <tr>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                </tr>
+                <tr>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                    <td>_</td>
+                </tr>
+            </table>
+            <div class="sec1-lists">
+                <ul>Unordered List
+                    <li>Bullet point 1</li>
+                    <li>Bullet point 2</li>
+                    <li>Bullet point 3</li>
+                    <li>Bullet point 4</li>
+                </ul>
+                <ol>Ordered List
+                    <li>Number 1</li>
+                    <li>Number 2</li>
+                    <li>Number 3</li>
+                    <li>Number 4</li>
+                </ol>
+            </div>
+        </div>
     </body>
     
 </html>
