Added background image + Changed p.intro text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </h1>
             <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
             <p class="intro">
-                This is the website (demo) I will be submitting as my Year 11 Digital Technology project.
+                This is the website I will be using to develop my skills for my Year 11 Digital Technology project.
             </p>
             <button class="openbtn" onclick="openWin()"><b>Visit my GitHub Repository!</b></button>
             <br>
