Week 5 Tasks (cont.)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     
     <head>
         <title>Demo 11TEC Website</title>        
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="JavaScript.js"></script>
+        <link rel="stylesheet" type="text/css" href="STYLE.css">
+        <script src="JAVASCRIPT.js"></script>
+        <script src="https://kit.fontawesome.com/66978bd54f.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -13,7 +14,7 @@
             <h1>
                 Hey, it's 3ryll3!
             </h1>
-            <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
+            <img class="pfp" src="C:\Users\3ryll\OneDrive\Pictures\Saved Pictures\xq pfp 2.jpg" alt="xq pfp 2">
             <p class="intro">
                 This is the website I will be using to develop my skills for my Year 11 Digital Technology project.
             </p>
@@ -68,6 +69,12 @@
                 <li>Number 3</li>
                 <li>Number 4</li>
             </ol>
+        </div>
+        <div class="sec3-time">
+            <button style="font-size:30px" class="openbtn" onclick="document.getElementById('demo').innerHTML=Date()">Tick tock!
+                <i class="far">&#xf017;</i>
+            </button>
+            <p class="time" id="demo"></p>
         </div>
     </body>
     
