--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     
     <head>
         <title>Demo 11TEC Website</title>        
-        <link rel="stylesheet" type="text/css" href="STYLE.css">
-        <script src="JAVASCRIPT.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="javascript.js"></script>
         <script src="https://kit.fontawesome.com/66978bd54f.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
