Week 5 Tasks (fin.)
- Changed Table content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>
                 Hey, it's 3ryll3!
             </h1>
-            <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
+            <img class="pfp" src="C:\Users\3ryll\OneDrive\Pictures\Saved Pictures\xq pfp 2.jpg" alt="xq pfp 2">
             <p class="intro">
                 This is the website I will be using to develop my skills for my Year 11 Digital Technology project.
             </p>
@@ -31,28 +31,52 @@
                     <th>Column 4</th>
                 </tr>
                 <tr>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
-                    <td>Data 3</td>
-                    <td>Data 4</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
                 </tr>
                 <tr>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
                 </tr>
                 <tr>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
                 </tr>
                 <tr>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
-                    <td>_</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                </tr>
+                <tr>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                </tr>
+                <tr>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                </tr>
+                <tr>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                </tr>
+                <tr>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
+                    <td>Data</td>
                 </tr>
             </table>
         </div>
