Resourced img.pfp src (2)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>
                 Hey, it's 3ryll3!
             </h1>
-            <img class="pfp" src="Resources/xq-pfp-2.jpg" alt="xq-pfp-2">
+            <img class="pfp" src="Resources\xq-pfp-2.jpg" alt="xq-pfp-2">
             <p class="intro">
                 This is the website I will be using to develop my skills for my Year 11 Digital Technology project.
             </p>
